Add Quarto formatter options

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,8 +27,12 @@ babel==2.18.0
     # via jupyterlab-server
 beautifulsoup4==4.14.3
     # via nbconvert
+black==26.1.0
+    # via ndmi110-graphs-and-networks
 bleach==6.3.0
     # via nbconvert
+celluloid==0.2.0
+    # via ndmi110-graphs-and-networks
 certifi==2026.1.4
     # via
     #   httpcore
@@ -45,6 +49,7 @@ charset-normalizer==3.4.4
     # via requests
 click==8.3.1
     # via
+    #   black
     #   click-plugins
     #   cligj
     #   mercantile
@@ -168,6 +173,7 @@ markupsafe==3.0.3
     #   nbconvert
 matplotlib==3.10.8
     # via
+    #   celluloid
     #   contextily
     #   ndmi110-graphs-and-networks
     #   seaborn
@@ -179,6 +185,8 @@ mercantile==1.2.1
     # via contextily
 mistune==3.2.0
     # via nbconvert
+mypy-extensions==1.1.0
+    # via black
 nbclient==0.10.4
     # via nbconvert
 nbconvert==7.17.0
@@ -215,6 +223,7 @@ overrides==7.7.0 ; python_full_version < '3.12'
     # via jupyter-server
 packaging==26.0
     # via
+    #   black
     #   geopandas
     #   ipykernel
     #   jupyter-events
@@ -234,6 +243,8 @@ pandocfilters==1.5.1
     # via nbconvert
 parso==0.8.6
     # via jedi
+pathspec==1.0.4
+    # via black
 pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'
     # via ipython
 pillow==12.1.1
@@ -241,7 +252,9 @@ pillow==12.1.1
     #   contextily
     #   matplotlib
 platformdirs==4.9.2
-    # via jupyter-core
+    # via
+    #   black
+    #   jupyter-core
 prometheus-client==0.24.1
     # via jupyter-server
 prompt-toolkit==3.0.52
@@ -277,6 +290,8 @@ python-dateutil==2.9.0.post0
     #   pandas
 python-json-logger==4.0.0
     # via jupyter-events
+pytokens==0.4.1
+    # via black
 pywinpty==3.0.3 ; os_name == 'nt'
     # via
     #   jupyter-server
