--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Graphs and Networks MMF UK Course"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "black>=26.1.0",
+    "celluloid>=0.2.0",
     "contextily>=1.7.0",
     "jupyterlab>=4.5.4",
     "matplotlib>=3.10.8",
